# boids

./: .gitmodules  .main.cpp.swp  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: main.cpp.18D209AB4EE90D5A.idx
shaders/: boids.metal
src/: main.cpp
